# zkp-grpc

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs  zkp_auth.rs
